# Gazer

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  GazerLink.spec  HEARTBEAT.md  README.md  SECURITY_ALERT.md  SECURITY_FIXES.md  SECURITY_FIXES_FINAL.md  constraints.txt  diff_loop.txt  diff_loop_utf8.txt  diff_tool_history.txt  docker-compose.yml  fix.py  loop_old.py  main.py  patch_test.py  patch_test_2.py  pyproject.toml  replace_imports.py  requirements.txt  test_debug.py  test_failures.txt  test_failures3.txt  test_failures5.txt  test_failures_filtered.txt  test_failures_utf8.txt  tool_policy_backup.py  tool_policy_backup_utf8.py
.claude/: settings.local.json
assets/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md  WEB_ONBOARDING_GUIDE.md
config/: settings.yaml
design/: web-pages-prompt.md
docs/: README.md  features.md
electronics/: README.md
hardware/: __init__.py
perception/: audio.py  capture.py  cloud_provider.py  ear.py  spatial.py  vision.py
satellite/: .gitignore  gazer_link_app.py
scripts/: git_batch_commits.ps1  migrate_model_providers_contract.py  rust_downshift_benchmark.py  sync-plugin-versions.py  verify_e2e_persona.py
src/: trace.txt
tests/: conftest.py  test_adapter_provider_contract.py  test_adapter_router_rollout.py  test_admin_api_new_features.py  test_admin_api_web_media.py  test_admin_memory_endpoints_openviking.py  test_admin_memory_graph_openviking.py  test_admin_websocket_cleanup.py  test_affective_state.py  test_agent_adapter_memory_guard.py  test_agent_loop_channel_commands.py  test_agent_loop_inbound_metadata.py  test_agent_loop_iteration_finalize.py  test_agent_message_bus.py  (+191 more)
(+585 files in other folders)
