[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gazer"
version = "0.1.0"
description = "Desktop embodied AI companion with dual-brain cognitive architecture"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "uvicorn>=0.32.0",
    "pyserial>=3.5",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",
    "pillow>=10.0.0",
    "openai>=1.50.0",
    "litellm>=1.63.8",
    "numpy>=1.26.0",
    "faiss-cpu>=1.9.0",
    "openviking",
    "watchdog>=5.0.0",
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "pyautogui>=0.9.54",
    "lark-oapi>=1.5.0",
    "trafilatura>=1.12.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "aiofiles>=24.0.0",
    "slack-bolt>=1.20.0",
    "cryptography>=42.0.0",
    "click>=8.1.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
perception = [
    "mss>=9.0.0",
    "opencv-python>=4.10.0",
    "mediapipe>=0.10.0",
    "faster-whisper>=1.0.0",
    "sherpa-onnx>=1.10.0",
    "edge-tts>=6.1.0",
    "pygame>=2.6.0",
    "sounddevice>=0.5.0",
    "pyaudio>=0.2.14",
]
ui = [
    "pyside6>=6.7.0",
]
browser = [
    "playwright>=1.48.0",
]
dev = [
    "pytest>=8.3.0",
    "black>=24.0.0",
]

[project.scripts]
gazer = "cli.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
